# cursives

./: README.md  pyproject.toml
cursives/: __init__.py  _cache.py
cursives/_utils/: __init__.py  _cache.py
cursives/data/: __init__.py
cursives/data/stores/: __init__.py  key_value_store.py  model_store.py
cursives/pydantic/: __init__.py  converters.py  models.py  utils.py
cursives/resources/: __init__.py
cursives/resources/pydantic/: models.py  utils.py
cursives/resources/text/: __init__.py  instructions.py  markdown.py
cursives/text/: __init__.py  markdown.py
cursives/text/formatting/: markdown.py
tests/: test_pydantic_converters.py  test_pydantic_models.py  test_text_formatting_markdown.py
